# nav-onboarding-2026

./: .clang-format  .editorconfig  .envrc  .gitattributes  .gitignore  README.md  colcon_defaults.yaml  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yaml  test.yaml
scripts/: common.py  create_package.py  extract_message.py  format.py  generate_pyrightconfig.py  lint.py  pre_commit.py  publish_message.py  setup_environment.py
src/bringup/: README.md  package.xml  setup.py
src/bringup/bringup/: launch_utils.py
src/bringup/config/: frames.yaml
src/bringup/launch/: core.launch.py  localization.launch.py  simulation.launch.py
src/bringup/rviz/: onboarding.rviz
src/core/utils/: README.md  package.xml  setup.py
src/core/utils/test/: test_config.py  test_geometry.py  test_world_occupancy_grid.py
src/core/utils/utils/: config.py  geometry.py  lifecycle.py  world_occupancy_grid.py
src/description/common_description/: CMakeLists.txt  README.md  package.xml
src/description/maverick_description/: CMakeLists.txt  package.xml
src/description/maverick_description/urdf/: constants.xacro
src/simulation/enc_vel_mock_publisher/: README.md  package.xml  setup.cfg  setup.py
src/simulation/enc_vel_mock_publisher/enc_vel_mock_publisher/: enc_vel_mock_publisher.py  enc_vel_mock_publisher_config.py
src/template/template_cpp/: CMakeLists.txt  README.md  package.xml
src/template/template_cpp/src/: template_cpp.cpp
src/template/template_python/: README.md  package.xml  setup.cfg  setup.py
src/template/template_python/template_python/: template_python.py  template_python_config.py
